--- a/Client/src/admin/Dashboard/Dashboard.module.css
+++ b/Client/src/admin/Dashboard/Dashboard.module.css
@@ -107,7 +107,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.678);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -117,8 +117,8 @@
   background: white;
   padding: 20px;
   border-radius: 10px;
-  text-align: center;
-  width: 300px;
+  text-align: left;
+  width: 400px;
   position: relative;
 }
 
