--- a/Client/src/admin/notifications/notification.module.css
+++ b/Client/src/admin/notifications/notification.module.css
@@ -9,6 +9,7 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 15px;
+    margin-top: -5px;
   }
   
   .refreshButton {
@@ -48,7 +49,7 @@
     color: #333;
   }
   
-  .userId {
+  .username {
     color: #0d55cc;
   }
   
