--- a/Client/src/admin/users/users.module.css
+++ b/Client/src/admin/users/users.module.css
@@ -6,9 +6,11 @@
   }
   
   .title {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 1rem;
+    margin-top: -10px;
+
   }
   
   .searchContainer {
